--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hero-blog",
+  "name": "groot-blog",
   "version": "2.0.0",
-  "author": "Greg Lobinski <greglobinski@gmail.com>",
+  "author": "Juhyeong Ko <dury.ko@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "antd": "^3.7.0",
@@ -52,6 +52,7 @@
     "tinycolor2": "^1.4.1",
     "typeface-open-sans": "^0.0.54",
     "yaml-loader": "^0.5.0"
+    
   },
   "keywords": [
     "gatsby"
@@ -59,6 +60,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "deploy": "gatsby build && gh-pages -d public -b master -r https://github.com/IamGroooooot/NestedGroot.git",
     "devhost": "gatsby develop --host 192.168.0.112",
     "format": "prettier --write 'src/**/*.js'",
     "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
