--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
     "styled-jsx-plugin-stylelint": "^0.1.0",
     "tinycolor2": "^1.4.1",
     "typeface-open-sans": "^0.0.54",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "^0.5.0",
+    "repository":{
+      "type": "git",
+      "url": "https://github.com/IamGroooooot/NestedGroot"
+    }
     
   },
   "keywords": [
